Readme, config changes

--- a/src/css/usng-web-map-custom.css
+++ b/src/css/usng-web-map-custom.css
@@ -51,3 +51,5 @@
   #map .feature-label.usng_10k {
     font-weight: bold;
     font-size: 110%; }
+#map .leaflet-draw-tooltip-subtext {
+  display: none !important; }
