--- a/src/scss/usng-web-map.scss
+++ b/src/scss/usng-web-map.scss
@@ -80,4 +80,8 @@
             font-size: 110%;
         }
     }
+    // don't display area reading when selecting polygons
+    .leaflet-draw-tooltip-subtext {
+        display: none !important;
+    }
 }
